* Add GD variables to the Yoast extra replacements - ADDED
* Elementor icon list fallback value #hide not working on archive pages - ADDED
* [gd_page_title] shortcode/widget added to show page title on GD pages - ADDED
* Fix for one comment restriction for cookie not enable case - FIXED
* GD pages with Divi builder breaks header - FIXED
* Translated GD screen id may break admin pages UI - FIXED

= 2.0.0.92 =
* Static map sometimes not resizing on mobile view - FIXED
* Fix recent review filter by location - FIXED
* Rank Math sitemap shows 404 error after each GeoDirectory plugin update - FIXED
* Yoast SEO v14.4 compatibility changes - FIXED

= 2.0.0.91 =
* Category font awesome icons have extra fas class on output which break few icons – FIXED
* Post badge widget shows excluded fields from package - FIELD
* GD Archive map with elementor loop might not filter markers if map is before loop - FIXED
* Translation of screen_id break GD dashboard functionality - FIXED
* YOOtheme shows incorrect title on GD pages - FIXED
* Badge label shows option value instead of option label for select type field - FIXED
* Option added to restrict user to submit one review per post - ADDED
* Yoast SEO v14.x compatibility changes - FIXED

= 2.0.0.90 =
* Customize map popup template for the post type - ADDED
* Detail page tabs & dropdown is not working on mobile device - FIXED
* GD > Listings widget elementor skin select not working - FIXED
* Use default location offset as a business hours default offset - CHANGED
* Response header shows 404 status when on results found on GD search page - FIXED

= 2.0.0.89 =
* Badge shortcode for file field %%input%% return file array - FIXED
* Yoast SEO OpenGraph meta not working on GD pages - FIXED
* Elementor Pro Utils class moved which can cause errors in older vers of Elementor - FIXED
* Elementor Icon List items can be hidden when empty by adding fallback of #hide - ADDED
* Elementor Star Rating needs to be rounded to one decimal place - FIXED