@@ -9,6 +9,7 @@
 * Fix for one comment restriction for cookie not enable case - FIXED
 * GD pages with Divi builder breaks header - FIXED
 * Translated GD screen id may break admin pages UI - FIXED
+* Form containing email & password fields has unique id - FIXED
 
 = 2.0.0.92 =
 * Static map sometimes not resizing on mobile view - FIXED
